# expense-tracker

./: .gitignore  CLAUDE.md  README.md
backend/: .env.example  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  config.py  extensions.py  logging_config.py
backend/app/application/: base_model.py  base_repository.py  errors.py
backend/app/modules/budget/: budget_model.py  budget_repository.py  budget_schema.py  budget_service.py  errors.py  types.py
backend/app/modules/budget/rest_api/: budget_blueprint.py
backend/app/modules/category/: category_model.py  category_repository.py  category_schema.py  category_service.py  errors.py  types.py
backend/app/modules/category/rest_api/: category_blueprint.py
backend/app/modules/dashboard/: dashboard_service.py  types.py
backend/app/modules/dashboard/rest_api/: dashboard_blueprint.py
backend/app/modules/expense/: errors.py  expense_model.py  expense_repository.py  expense_schema.py  expense_service.py  types.py
backend/app/modules/expense/rest_api/: expense_blueprint.py
backend/instance/: expense_tracker.db
backend/tests/: conftest.py
backend/tests/modules/budget/: test_budget_api.py  test_budget_service.py
backend/tests/modules/category/: test_category_api.py  test_category_service.py
backend/tests/modules/dashboard/: test_dashboard_api.py  test_dashboard_service.py
backend/tests/modules/expense/: test_expense_api.py  test_expense_service.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/tests/: setup.ts
(+42 files in other folders)
